...
            android:id="@+id/medicationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toEndOf="@id/medicationThumbnail"
            app:layout_constraintEnd_toStartOf="@id/statusChip"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Paracetamol" />

        <TextView
            android:id="@+id/medicationDose"
            android:layout_width="0dp"
...
