...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medListTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMedicationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/med_list_add_content_description"
        android:src="@drawable/ic_lucide_plus"
        app:layout_constraintBottom_toBottomOf="parent"
...
